# deep-learning-models

./: CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt
backend/include/: constants.hpp  data_loader.hpp  logging.hpp  univariate_linear_regression.hpp
backend/tests/: test_data_loader.cpp  test_univariate_linear_regression.cpp
data/: data.txt  mfst_data.txt
include/: data_loader.hpp  linear_regression.hpp  linear_regression_exception.hpp  logging.hpp  model_exception.hpp  multiple_linear_regression.hpp  univariate_linear_regression.hpp  utils.hpp
src/: data_loader.cpp  linear_regression.cpp  main.cpp  multiple_linear_regression.cpp  univariate_linear_regression.cpp  utils.cpp
tests/: test_data_loader.cpp  test_multiple_linear_regression.cpp  test_univariate_linear_regression.cpp  test_utils.cpp
ui/: CMakeLists.txt
ui/include/: base_state.hpp  menu.hpp  menu_state.hpp  ui_constants.hpp
ui/src/: menu.cpp  menu_state.cpp
